# gym-moviment

./: .example.secret.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt  settings.toml
.github/workflows/: ci.yaml
alembic/: env.py
migrations/: env.py
migrations/versions/: 7e5fa68d5d2a_create_user_and_lead.py  842356921de7_adjusting_table_user_and_lead.py
src/adapters/: orm.py
src/adapters/repositories/: __init__.py  user.py
src/commons/abstracts/: unity_of_work.py
src/domain/: __init__.py  exceptions.py
src/domain/lead/: model.py
src/domain/user/: model.py
src/routers/: v1.py
src/routers/resources/: health_check.py  user.py
src/schemas/: lead.py  user.py
src/services/: uow.py
src/services/command/: user.py
src/services/query/: health_check.py
