[tool.poetry]
name = "gym-movement"
version = "0.1.0"
description = "gym-movement-api"
authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
dynaconf = "^3.1.8"
pre-commit = "^2.18.1"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
mysql-connector-python = "^8.0.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
